Implement named lists interface
- add scrolling left / right
- loading and error messages
